@@ -34,7 +34,7 @@ public class CtrlFileOther {
       else
         throw new RuntimeException("Unknown operating system");
       String filename=editors.getFirst().getFile().getParentFile().getCanonicalPath();
-      Runtime.getRuntime().exec(cmd+filename);
+      Runtime.getRuntime().exec(new String[]{cmd, filename});
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
